2005-07-01  Jim Meyering  <jim@meyering.net>

	* chown.c, cloexec.c, dup-safer.c, dup2.c, fsusage.c, getcwd.c:
	* getloadavg.c, mountlist.c, openat.h, save-cwd.c, tempname.c:
	Assume HAVE_FCNTL_H (i.e., include <fcntl.h> unconditionally,
	and don't include <sys/file.h>).

2005-07-01  Paul Eggert  <eggert@cs.ucla.edu>

	* xnanosleep.c: Include timespec.h, since OpenBSD 3.4 <time.h>
	declares only 'struct timespec;' (!).

2005-06-30  Jim Meyering  <jim@meyering.net>

	* stdopen.c: Add copyright.
	Include <fcntl.h> and <unistd.h> unconditionally --
	it seems to be ok to do this, these days.

	* stdopen.c: Rewritten by Paul Eggert.
	Now, the minimum overhead is just two system calls: dup and close.

	* stdopen.c: New file.  As yet unused.
	The minimum overhead is three fstat calls.
	* stdopen.h: New file.

	* argmatch.h [!VERIFY] (VERIFY): Define.
	(ARGMATCH_VERIFY): Use it, so this macro may be used more than
	once in any given scope.

	* xalloc.h (VERIFY_EXPR): Undef before defining, and add a comment.

2005-06-29  Jim Meyering  <jim@meyering.net>

	* mkdir-p.c (make_dir_parents): Don't apply sizeof to a hard-coded
	type name.  Use the variable name instead.
	* idcache.c (getuser, getuidbyname, getgroup, getgidbyname): Likewise.

	* xalloc.h (VERIFY_EXPR): Define.
	(X2REALLOC): New macro, to make using x2realloc a little safer.

2005-06-26  Jim Meyering  <jim@meyering.net>

	* Makefile.am (libcoreutils_a_SOURCES): Remove diacrit.c and diacrit.h.

2005-06-25  Jim Meyering  <jim@meyering.net>

	* Makefile.am (libcoreutils_a_SOURCES): Remove
	root-dev-ino.c and root-dev-ino.h.
	(libcoreutils_a_SOURCES): Remove dev-ino.h too, now that we
	get it via root-dev-ino.m4
	(libcoreutils_a_SOURCES): Remove version-etc.c version-etc.h
	and version-etc-fsf.c.

2005-06-24  Paul Eggert  <eggert@cs.ucla.edu>

	* canon-host.c (canon_host) [HAVE_GETADDRINFO]: Use `= { 0, };' to
	initialize local `hint'.  This undoes the previous change, and
	syncs with gnulib.
