@@ -24,9 +24,7 @@
 #endif
 
 #include <sys/types.h>
-#ifdef HAVE_UNISTD_H
-# include <unistd.h>
-#endif
+#include <unistd.h>
 #include <stdlib.h>
 #include <string.h>
 #ifdef HAVE_NETDB_H
