@@ -23,9 +23,7 @@
 
 #include "cloexec.h"
 
-#if HAVE_UNISTD_H
-# include <unistd.h>
-#endif
+#include <unistd.h>
 
 #include <fcntl.h>
 
