@@ -25,9 +25,7 @@
 
 #include <fcntl.h>
 
-#if HAVE_UNISTD_H
-# include <unistd.h>
-#endif
+#include <unistd.h>
 
 #ifndef F_DUPFD
 static int
