@@ -23,9 +23,7 @@ ftruncate (int fd, off_t length)
 
 #  include <sys/stat.h>
 #  include <errno.h>
-#  if HAVE_UNISTD_H
-#   include <unistd.h>
-#  endif
+#  include <unistd.h>
 
 int
 ftruncate (int fd, off_t length)
